# Ghost

./: .gitignore  CMakeLists.txt
include/: Listener.h  Matcher.h  Player.h  Scanner.h  Teacher.h  Trainer.h
src/: Listener.cpp  Main.cpp  Matcher.cpp  Player.cpp  Scanner.cpp  Teacher.cpp  Trainer.cpp
